<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/uploadNews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/upload_news"
            android:textSize="20sp" />

        <Button
            android:id="@+id/uploadCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/upload_category"
            android:textSize="20sp" />

        <Button
            android:id="@+id/uploadAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/upload_ads"
            android:textSize="20sp" />

        <Button
            android:id="@+id/showCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/show_categories"
            android:textSize="20sp" />
        <Button
            android:id="@+id/showBreaking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/show_breaking_news"
            android:textSize="20sp" />
        <Button
            android:id="@+id/showTrending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/show_trending_news"
            android:textSize="20sp" />
        <Button
            android:id="@+id/showGadgets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/show_gadgets_news"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>