<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/cancel"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_margin="10dp"
                android:background="@drawable/item_bg"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_cancel_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/newsTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upload_news"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/upload"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/upload"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_margin="10dp"
                android:background="@drawable/item_bg"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_file_upload_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/choseNewsImg"
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choseNewsImg">

            <CheckBox
                android:id="@+id/breakingNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breaking_news"
                android:textSize="16sp"
                android:visibility="gone"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/trendingNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_news"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/gadgets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gadgets"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hindi_headline"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <EditText
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="no"
                android:inputType="textUri"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/english_headline"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

            <EditText
                android:id="@+id/titleEngTv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="no"
                android:inputType="textUri"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_url"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput">

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:importantForAutofill="no"
                android:inputType="textUri"
                android:textColor="@color/black"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_description"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:cursorVisible="true"
                android:focusable="true"
                android:gravity="start"
                android:inputType="textMultiLine|textLongMessage"
                android:minWidth="390dp"
                android:minHeight="200dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                tools:ignore="Autofill,LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/enter_english_description"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <EditText
                android:id="@+id/eng_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:cursorVisible="true"
                android:focusable="true"
                android:gravity="start"
                android:inputType="textMultiLine|textLongMessage"
                android:minWidth="390dp"
                android:minHeight="200dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                tools:ignore="Autofill,LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>